--- a/app/src/main/res/layout/alert_loading.xml
+++ b/app/src/main/res/layout/alert_loading.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     android:gravity="center">
 
-    <TextView
-        android:id="@+id/txtTitleAlert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        />
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:id="@+id/txtDialogMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:textStyle="bold"
+        android:gravity="center"
         />
 
 </LinearLayout>
