--- a/app/src/main/res/layout/alert_critica.xml
+++ b/app/src/main/res/layout/alert_critica.xml
@@ -10,11 +10,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginBottom="15dp">
         <TextView
-            android:id="@+id/txtDialogMessageConfirm"
+            android:id="@+id/txtDialogMessageCritica"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:textStyle="bold"
+            android:textSize="15dp"/>
 
     </LinearLayout>
 
