Implementando o carregamento dos dados do usuario no menu drawer.

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lnlDrawerProfile"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
@@ -18,20 +19,23 @@
         android:layout_height="80dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:background="@drawable/ic_iconfinder_user_01_186382" />
+        android:background="@drawable/ic_iconfinder_user_01_186382"
+        android:layout_gravity="center"/>
 
     <TextView
-        android:id="@+id/txtnameDrawer"
+        android:id="@+id/txtNameDrawer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:gravity="center"/>
 
     <TextView
-        android:id="@+id/txtemailDrawer"
-        android:layout_width="wrap_content"
+        android:id="@+id/txtEmailDrawer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:text="@string/nav_header_subtitle"
+        android:gravity="center"/>
 
 </LinearLayout>
